# blogs

./: .gitignore
aws-batch-flow/flows/: flow.py  out_response.json  pyproject.toml  segmint.py
aws-batch-flow/terraform-batch/: .gitignore  .gitlab-ci.yml  README.md
aws-batch-flow/terraform-batch/batch-job-files/: whalesay.json
aws-batch-flow/terraform-batch/dev/: ecr.tf  main.tf  providers.tf  terraform.auto.tfvars  terraform.tfstate  terraform.tfstate.backup  variables.tf  versions.tf
aws-batch-flow/terraform-batch/modules/batch-job-definition/: main.tf  variables.tf
aws-batch-flow/terraform-batch/modules/batch-job-queue/: compute-environment.tf  outputs.tf  queue.tf  variables.tf
aws-batch-flow/terraform-batch/modules/network/: main.tf  outputs.tf  variables.tf
aws-batch-flow/terraform-batch/modules/prefect-agent/: bootstrap-prefect-agent.sh  iam.tf  main.tf  variables.tf
aws-batch-flow/terraform-batch/modules/state-management/: main.tf
dbt-prefect-2.0/: flow.py
ecs-task/: flow.py
flow-starter-lambda/: MD5.txt  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml
flow-starter-lambda/prefect-lambda/: package-lock.json  package.json  package.toml
kafka-prefect2.0/: consumer.py  pyproject.toml
prefect-firewood/: flow.py
prefect-lambda/: README.md  serverless.yml
pulsar-prefect2.0/: consumer.py  pyproject.toml
